--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
-
-        <!--PROFESSIONAL PORTFOLIO title-->
-<title>
-    Cori Cathemer - Professional Portfolio
-</title>
+        <title>Cori Cathemer - Professional Portfolio</title>
     </head>
     <body>
         <!--navigation with subtitle -->
-        <header>
+        <header class="header">
             <h1>
-                Cori Cathemer - Professional Portfolio
+                <a href="/">Cori Cathemer - Professional Portfolio</a>
             </h1>
             <nav class="nav">
                 <ul>
-                    <li>About Me</li>
-                    <li>work</li>
-                    <li>contact me</li>
-                    <li>resume</li>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+
+                    <li>
+                        <a href="#work">Work</a>
+                    </li>
+
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -31,14 +34,8 @@
         </section>
       
         <!--about me-->
-        <section class="about-me">
+        <section id="about-me">
             <h2>About Me</h2>
-
-            <div class="headshot">
-
-            <!-- <img src="./assets/images/headshot.jpg"/> -->
-
-            </div>
         <p>
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
         </p>
@@ -47,13 +44,13 @@
         </section>
 
         <!--work-->
-        <section class="work">
+        <section id="work">
             <h2>Work</h2>
             <!-- RUN BUDDY -->
         </section>
         
         <!--contact me-->
-        <section class="contact-me">
+        <section id="contact-me">
             <h2>Contact Me</h2>
                 <ul>
                     <li>Phone Number</li>
