--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             <h2>Work</h2>
         <div class="container">
             <div class="grid-container">
-                <div class="grid-item box-1">One, </div>
-                <div class="grid-item box-2">Two, </div>
-                <div class="grid-item box-3">Three, </div>
-                <div class="grid-item box-4">Four, </div>
-                <div class="grid-item box-5">Five, </div>
-                <div class="grid-item box-6">Six, </div>
+                <div class="grid-item box-1"> One, One,One,One,One,One,One,One,One,One,One,</div>
+                <div class="grid-item box-2"> Two,</div>
+                <div class="grid-item box-3"> Three, </div>
+                <div class="grid-item box-4"> Four, </div>
+                <div class="grid-item box-5"> Five, </div>
+                <div class="grid-item box-6"> Six, </div>
             </div>
         </div>
         </section>
