--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
                     <li>
                         <a href="#about-me">About Me</a>
                     </li>
-
                     <li>
                         <a href="#work-projects">Work</a>
                     </li>
-
                     <li>
                         <a href="#contact-me">Contact Me</a>
                     </li>
@@ -49,8 +47,8 @@
             <h2>Work</h2>
         <div class="container">
             <div class="grid-container">
-                <div class="grid-item box-1"> One, One,One,One,One,One,One,One,One,One,One,</div>
-                <div class="grid-item box-2"> Two,</div>
+                <div class="grid-item box-1"> One, </div>
+                <div class="grid-item box-2"> Two, </div>
                 <div class="grid-item box-3"> Three, </div>
                 <div class="grid-item box-4"> Four, </div>
                 <div class="grid-item box-5"> Five, </div>
