fixed grid, updated h2's, and html

--- a/index.html
+++ b/index.html
@@ -28,45 +28,59 @@
 
         <!--hero image-->
         <section class="hero">
-            <!-- <img src="./assets/images/DSC02377.JPG"/> -->
+            <div class="hero-title">
+                <h3>Full Stack Developer Student</h3>
+            </div>
         </section>
       
         <!--about me-->
-        <article id="#about-me" class="about-section">
+        <section id="#about-me" class="about-section">
             <img src="./assets/images/headshot.jpg">
-            <div class="About-Me text-left">
+            <div class="about-me-title">
                 <h2>About Me</h2>
+            </div>
+            <div class="aboutme-body">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
-        </article>
+        </section>
 
         <!--work-->
         <section id="work-projects" class="work">
-            <h2>Work</h2>
+            <div class="work-title">
+                <h2>Work</h2>
+            </div>
         <div class="container">
-            <div class="grid-container">
-                <div class="grid-item box-1"> One, </div>
-                <div class="grid-item box-2"> Two, </div>
-                <div class="grid-item box-3"> Three, </div>
-                <div class="grid-item box-4"> Four, </div>
-                <div class="grid-item box-5"> Five, </div>
-                <div class="grid-item box-6"> Six, </div>
+            <div class="work-grid">
+                <div class="grid-item box-1"> 
+                    <a href="google.com">Placeholder</a> 
+                </div>
+                <div class="grid-item box-2"> Placeholder </div>
+                <div class="grid-item box-3"> Horiseon </div>
+                <div class="grid-item box-4"> Placeholder </div>
+                <div class="grid-item box-5"> Placeholder </div>
+                <div class="grid-item box-6"> Run Buddy </div>
             </div>
         </div>
         </section>
         
         <!--contact me-->
-        <section id="contact-me" class="contact">
+        <address id="contact-me" class="contact">
+            <div class="contact-info">
             <h2>Contact Info</h2>
-            <ul>
-                <li>email</li>
-                <li>phone</li>
-                <li>github</li>
-                <li>twitter</li>
-            </ul>
-        </section>
+            </div>
+            <div class="contact-grid">
+                <a href="tel">5208615263</a>
+                <a href="email">coricathemer@gmail.com</a>
+            </div>
+            <!-- <ul>
+                <li class="contactlinks">email</li>
+                <li class="contactlinks">phone</li>
+                <li class="contactlinks">github</li>
+                <li class="contactlinks">twitter</li>
+            </ul> -->
+        </address>
     <div>
     </body>
 </html>
