work section updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--navigation with subtitle -->
         <header class="header">
             <h1>
-                <a href="/">Cori Cathemer - Professional Portfolio</a>
+                <a href="#about-me">Cori Cathemer - Professional Portfolio</a>
             </h1>
             <nav class="nav">
                 <ul>
@@ -52,15 +52,25 @@
                 <h2>Work</h2>
             </div>
         <div class="container">
-            <div class="work-grid">
-                <div class="grid-item box-1"> 
-                    <a href="google.com">Placeholder</a> 
+            <div id="main-grid" class="work-grid">
+                <div class="work item-1"> 
+                    <a href="#">Placeholder</a> 
                 </div>
-                <div class="grid-item box-2"> Placeholder </div>
-                <div class="grid-item box-3"> Horiseon </div>
-                <div class="grid-item box-4"> Placeholder </div>
-                <div class="grid-item box-5"> Placeholder </div>
-                <div class="grid-item box-6"> Run Buddy </div>
+                <div class="work item-2">
+                     <a href="#">Placeholder</a>
+                     </div>
+                <div class="work item-3">
+                     <a href="https://coricathemer.github.io/code-refactor/">Horiseon</a>
+                    </div>
+                <div class="work item-4"> 
+                    <a href="#">Placeholder</a>
+                </div>
+                <div class="work item-5">
+                     <a href="#">Placeholder</a> 
+                    </div>
+                <div class="work item-6">
+                    <a href="https://coricathemer.github.io/run-buddy-2.0/">Run Buddy</a>
+                </div>
             </div>
         </div>
         </section>
