added first group project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div id="main-grid" class="work-grid">
                 <div class="work item-1"> 
-                    <a href="#">Placeholder</a> 
+                    <a href="https://vloebel.github.io/happycamper/">Visit America Project</a> 
                 </div>
                 <div class="work item-2">
                      <a href="#">Placeholder</a>
