updated the grid and added latest project to work section

--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
             <div class="work-title">
                 <h2>Work</h2>
             </div>
-        <div class="container">
-            <div id="main-grid" class="work-grid">
-                <div class="work item-1"> 
-                    <a href="#">Placeholder</a> 
+        <div class="work-grid-container">
+            <!-- <div id="main-grid" class="work-grid"> -->
+                <div class="work-grid-item"> 
+                    <a href="https://vloebel.github.io/happycamper/">Visit America Project</a> 
                 </div>
-                <div class="work item-2">
+                <div class="work-grid-item">
                      <a href="#">Placeholder</a>
                      </div>
-                <div class="work item-3">
+                <div class="work-grid-item">
                      <a href="https://coricathemer.github.io/code-refactor/">Horiseon</a>
                     </div>
-                <div class="work item-4"> 
+                <div class="work-grid-item"> 
                     <a href="#">Placeholder</a>
                 </div>
-                <div class="work item-5">
+                <div class="work-grid-item">
                      <a href="#">Placeholder</a> 
                     </div>
-                <div class="work item-6">
+                <div class="work-grid-item">
                     <a href="https://coricathemer.github.io/run-buddy-2.0/">Run Buddy</a>
                 </div>
             </div>
