--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                      <a href="https://coricathemer.github.io/code-refactor/">Horiseon</a>
                     </div>
                 <div class="work-grid-item"> 
-                    <a href="#">Placeholder</a>
+                    <a href="https://flash-card-buddy.herokuapp.com/">flash-card-buddy</a>
                 </div>
                 <div class="work-grid-item">
                      <a href="#">Placeholder</a> 
